--- a/css/app.css
+++ b/css/app.css
@@ -53,6 +53,21 @@ ul, ol, menu {
     background-color: #000000;
 }
 
-.canvas {
+.canvas-wrapper {
     padding: 0 .75rem .75rem .75rem;
+}
+
+.canvas {
+    border: 1px solid #606875;
+
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.square {
+    width: calc(100% / 60);
+    aspect-ratio: 1 / 1;
+    border: 1px solid #e2e2e2;
+
+    font-size: .5rem;
 }
