--- a/css/app.css
+++ b/css/app.css
@@ -38,19 +38,24 @@ ul, ol, menu {
 
 .color-list {
     display: flex;
-    gap: .75rem;
+    gap: .25rem;
 
     padding: .75rem;
+    border-radius: .75rem;
 
     background-color: #ffffff;
 }
 
 .color-item {
-    display: inline-block;
+    border: 4px solid #ffffff;
+    border-radius: 50%;
+
+    overflow: hidden;
+}
+
+.color-item__color {
     width: 1.25rem;
     aspect-ratio: 1 / 1;
-    border-radius: 50%;
-    background-color: #000000;
 }
 
 .canvas-wrapper {
@@ -70,4 +75,8 @@ ul, ol, menu {
     border: 1px solid #e2e2e2;
 
     font-size: .5rem;
+}
+
+.selected {
+    border-color: #1FBE53;
 }
