--- a/css/app.css
+++ b/css/app.css
@@ -39,7 +39,7 @@ ul, ol, menu {
 .color-list {
     display: flex;
 
-    padding: .75rem;
+    padding: .5rem;
     border-radius: .75rem;
 
     background-color: #ffffff;
@@ -54,6 +54,8 @@ ul, ol, menu {
 
 .color-item__color {
     width: 1.25rem;
+    border-radius: 50%;
+
     aspect-ratio: 1 / 1;
 }
 
@@ -78,4 +80,23 @@ ul, ol, menu {
 
 .selected {
     border-color: #1FBE53;
+}
+
+.erase {
+    position: relative;
+    border: 1px solid #FE0101;
+}
+
+.erase::before {
+    display: block;
+    content: '';
+    width: 18px;
+    height: 1px;
+
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%) rotate(45deg);
+
+    background-color: #FE0101;
 }
